added lots of TODOs with additional work for the event system

--- a/packages/helloworld/package.json
+++ b/packages/helloworld/package.json
@@ -4,5 +4,9 @@
         "helloworld.h"
     ],
     "init":"helloworld_init",
-    "event_handlers": []
+    "events": {
+        "handled":{
+            "timer": "helloworld_handler"
+        }
+    }
 }
